--- a/FlyOceanFish.github.io/_config.yml
+++ b/FlyOceanFish.github.io/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: FlyOceanFish
+title: FlyOceanFish' Blog
 subtitle: You Believe,You Can
 description: Better Late Than Never
 author: FlyOceanFish
