--- a/FlyOceanFish.github.io/themes/next/_config.yml
+++ b/FlyOceanFish.github.io/themes/next/_config.yml
@@ -325,7 +325,7 @@ font:
   codes:
     external: true
     family:
-    size: 14
+    size: 15
 
 
 # ---------------------------------------------------------------
@@ -678,7 +678,7 @@ canvas_nest: false
 three_waves: false
 
 # canvas_lines
-canvas_lines: false
+canvas_lines: true
 
 # canvas_sphere
 canvas_sphere: false
