--- a/FlyOceanFish.github.io/themes/next/_config.yml
+++ b/FlyOceanFish.github.io/themes/next/_config.yml
@@ -370,13 +370,13 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # more info please open https://github.com/xCss/Valine
 valine:
-  enable: false
-  appid:  # your leancloud application appid
-  appkey:  # your leancloud application appkey
+  enable: true
+  appid: BUyek27xhBJW608unzBEyhWI-gzGzoHsz # your leancloud application appid
+  appkey: lT2NUWTMwPfNYl6xMQUtUxDv # your leancloud application appkey
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
   verify: false # Verification code
-  placeholder: Comment input placeholder
-
+  placeholder: 请输入评论
+  
 # Support for youyan comments system.
 # You can get your uid from http://www.uyan.cc
 #youyan_uid: your uid
