1、更新一篇文章并且置顶 2、优化博客加载速度

--- a/FlyOceanFish.github.io/themes/next/_config.yml
+++ b/FlyOceanFish.github.io/themes/next/_config.yml
@@ -288,7 +288,7 @@ font:
   enable: false
 
   # Uri of fonts host. E.g. //fonts.googleapis.com (Default).
-  host:
+  host: //fonts.lug.ustc.edu.cn
 
   # Font options:
   # `external: true` will load this font family from `host` above.
@@ -376,7 +376,7 @@ valine:
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
   verify: false # Verification code
   placeholder: 请输入评论
-  
+
 # Support for youyan comments system.
 # You can get your uid from http://www.uyan.cc
 #youyan_uid: your uid
