--- a/FlyOceanFish.github.io/themes/next/_config.yml
+++ b/FlyOceanFish.github.io/themes/next/_config.yml
@@ -345,7 +345,7 @@ han: false
 #swiftype_key:
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: 8f73d05f1a471433ed938c462af80741
 
 # Duoshuo ShortName
 #duoshuo_shortname:
@@ -367,7 +367,7 @@ changyan:
 
 
 # Valine.
-# You can get your appid and appkey from https://leancloud.cn
+# You can get your appid and appkey from c
 # more info please open https://github.com/xCss/Valine
 valine:
   enable: true
@@ -473,7 +473,7 @@ needmoreshare2:
 # user_id must NOT be null when admin_enable is true!
 # you can visit http://dev.duoshuo.com get duoshuo user id.
 duoshuo_info:
-  ua_enable: true
+  ua_enable: false
   admin_enable: false
   user_id: 0
   #admin_nickname: Author
